+ features
* bugfixes
====================== 0.9.24 ======================
Game:
 + New weapon: Minigun
 + Change weapon icons: Mudball, air mine
 + Add healing visual effect in Paramedics mode and a few scripts
 + Show remaining ammo when using Birdy egg or RC Plane bomb
 + Add separate control for team chat (default: U)
 + Add separate control for changing hedgehog tags (default: Home)
 + Hedgehog tag translucency is now changed with Precise + Change hedgehog tags key
 * Fix time box being usable in Sudden Death with 0 health decrease
 * Fix chat input key being sometimes registered twice

Frontend:
 + Schemes are now stored in separate files under Schemes
 * Fix broken preview of team hats (e.g. cap_team)

Content:
 + Major overhaul of Sudden Death visuals in most themes
 + New flag: uk_scotland
 + New voice: Default_pl (Polish)

Styles and game modes:
 + Construction Mode: Add a few shortcuts
 + Construction Mode: Show selected object at cursor and a crate preview icon
 + Construction Mode: Remember all selections
 + Construction Mode: Add subtle glow to healing station
 + Construction Mode: Allow to change "Switch Hedgehog" in weapon scheme
 + Construction Mode: Hide selected sub-modes from crate/object placer from enemies over the net
 + Continental supplies: Custom weapon icons for the special weapons
 + Racer, Tech Racer: First waypoint flashes before the hog starts moving
 + Racer: Use dark waypoints in bright themes like Bath
 + Racer, Tech Racer: Various other waypoint appearance improvements
 + Battalion: Minor message and visual improvements
 + Battalion: Mutate hog hats by default, but not the names
 + Battalion: Script parameter “mutatenames=true” to also change the hog names (default: false)
 + Battalion (King Mode): Kings always wear crowns and non-kings don't, regardless of settings
 + Battalion (King Mode): If the king dies, the hogs die normally instead of disappearing
 * Battalion: Some texts in the mission panel were wrong and misleading